# pytask

./: .gitignore  compose.yaml  main.py  pyproject.toml  pytest.ini
cmd/: main.py
internal/config/: __init__.py
internal/controllers/: task.py  user.py
internal/dataclasses/: __init__.py
internal/dependencies/: __init__.py
internal/exceptions/: __init__.py
internal/middlewares/: auth.py
internal/models/: task.py  user.py
internal/mysite/: settings.py  urls.py
internal/stores/: base.py  task.py  user.py
internal/tasks/: models.py  views.py
internal/tests/api/: test_task.py
internal/tests/integration/: test_task_store.py  test_user_store.py
internal/tests/unit/: test_task_model.py  test_user_model.py
internal/utils/: __init__.py
